# learnr_app

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  playwright.config.ts
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
apps/api/scripts/: init_qdrant_collections.py  migrate_qdrant_multi_course.py  seed_reading_chunks.py
apps/api/src/: celery_app.py  config.py  dependencies.py  exceptions.py  main.py
apps/api/src/db/: __init__.py  qdrant_client.py  redis_client.py  session.py  utils.py
apps/api/src/middleware/: __init__.py  error_handler.py
apps/api/src/models/: __init__.py  belief_state.py  concept.py  concept_prerequisite.py  concept_unlock_event.py  course.py  diagnostic_session.py  enrollment.py  password_reset_token.py  question.py  question_concept.py  quiz_response.py  quiz_session.py  reading_chunk.py  reading_queue.py  review_response.py  review_session.py  user.py
apps/api/src/repositories/: __init__.py  belief_repository.py  concept_repository.py  course_repository.py  diagnostic_session_repository.py  password_reset_repository.py  qdrant_repository.py  question_repository.py  quiz_session_repository.py  reading_chunk_repository.py  reading_queue_repository.py  response_repository.py  review_session_repository.py  user_repository.py
apps/api/src/routes/: __init__.py  auth.py  beliefs.py  concepts.py  courses.py  coverage.py  diagnostic.py  health.py  prerequisites.py  questions.py  quiz.py  reading.py  (+2 more)
apps/api/tests/: conftest.py  test_health.py
(+462 files in other folders)
